Fixing format
Pricing section was weirdly off center, recentered items

--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ a.btn.btn-primary {
     grid-template-columns: 1fr 1fr;
     /* margin: var(--size-100); */
     column-gap: var(--size-10);
-    justify-items: end;
+    justify-items: center;
 }
 
 .pf-img {
